src/objects/csord__Service__c.object
<CustomObject>
    <fields>
        <fullName>UM_DeactivationReason__c</fullName>
        <label>Deactivation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DependsOnProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depends On Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services (Depends On Product Configuration)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_DependsOnService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depends On Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Services (Depends On)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
     <fields>
        <fullName>LG_DependsOnSecondaryService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depends On Secondary Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Services (Service)</relationshipLabel>
        <relationshipName>Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_DownloadSpeed__c</fullName>
        <label>Download Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_ESN__c</fullName>
        <label>ESN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_EntryDate__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_EstimatedPriceCAPEX__c</fullName>
        <label>Estimated Price (CAPEX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_EstimatedPriceOPEX__c</fullName>
        <label>Estimated Price (OPEX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Geolocation__c</fullName>
        <formula>TEXT (LG_Address__r.cscrm__Geolocation__Latitude__s)  &amp; &quot;, &quot; &amp; TEXT (LG_Address__r.cscrm__Geolocation__Longitude__s)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geolocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_GetCurrentContractTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Current Contract Term</label>
        <type>Checkbox</type>
    </fields>
     <fields>
        <fullName>UM_HPBXExternalId__c</fullName>
        <formula>IF (CONTAINS( LG_ProductFamily__c , &apos;Virtual Voice&apos;), 
csord__Subscription__r.csconta__Billing_Account__r.LG_BillingAccountNumber__c &amp; &apos;|&apos; &amp; LG_Address__r.LG_PremiseNumber__c &amp; &apos;|&apos; &amp; 
CASE( LG_Address__r.cscrm__State_Province__c , &apos;BW&apos;, &apos;BW&apos;, &apos;HSN&apos;, &apos;HSN&apos;,&apos;NRW&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPBX External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_HelpText__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_IPv4__c</fullName>
        <description>BGP IPv4 Address space</description>
        <inlineHelpText>BGP IPv4 Address space</inlineHelpText>
        <label>UM IPv4</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_IPv6__c</fullName>
        <description>BGP IPv6 Address space</description>
        <inlineHelpText>BGP IPv6 Address space</inlineHelpText>
        <label>UM IPv6</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Is_Active_Today__c</fullName>
        <formula>csord__Activation_Date__c &lt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active Today?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Is_Inactive_Today__c</fullName>
        <formula>csord__Deactivation_Date__c &lt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Inactive Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_JiraIssueTypeId__c</fullName>
        <label>JiraIssueTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Latest_Cancellation_Letter_Arrival__c</fullName>
        <description>This is calculated in the background based on the number of months put in Cancellation Period</description>
        <inlineHelpText>Contract End Date - Cancellation Period (in Months)</inlineHelpText>
        <label>Latest Cancellation Letter Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_LogisticsReference__c</fullName>
        <description>To store the Logistics Reference number</description>
        <label>Logistics Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_NumberManagement__c</fullName>
        <label>Number Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_NumberOfOpenPortingProcesses__c</fullName>
        <label>Number of Open Porting Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Order_Number__c</fullName>
        <description>Order Number for JIRA form</description>
        <formula>LG_RootOrder__r.csord__Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_PICReason__c</fullName>
        <label>PIC Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_PartnerSalesId__c</fullName>
        <formula>csord__Subscription__r.Sales_Partner_Id__c</formula>
        <label>Partner Sales Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_PhoneExtension__c</fullName>
        <description>for storing VW phone extension</description>
        <label>Phone Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ProvisioningServiceExternalId__c</fullName>
        <label>Provisioning Service External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SalesID__c</fullName>
        <label>Sales ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SendVoiceworksExternalID__c</fullName>
        <label>Send Voiceworks External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ServiceStatus__c</fullName>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Sent to Provisioning</fullName>
                </value>
                <value>
                    <fullName>Numbers Ported</fullName>
                </value>
                <value>
                    <fullName>Ready for Billing</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Termination Requested</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed Replaced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_StoreOrderNumber__c</fullName>
        <label>Store Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SubscriberId__c</fullName>
        <description>This is HPBX related field. Stores the Subscriber id sent by 3rd party.</description>
        <externalId>true</externalId>
        <label>Subscriber ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SubscriberName__c</fullName>
        <label>Subscriber Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_TerminationCode__c</fullName>
        <label>Termination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_TestNumberBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Number Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_UploadSpeed__c</fullName>
        <label>Upload Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_VoiceWorksObjectId__c</fullName>
        <description>filed for storing voiceworks object id on service</description>
        <label>VoiceWorks Object Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
      <fields>
        <fullName>LG_Replacement_Service_Change_Type__c</fullName>
        <formula>TEXT(csordtelcoa__Replacement_Service__r.csord__Subscription__r.csordtelcoa__Change_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Service Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_WaitForAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait for Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_WorkflowTriggerTimer__c</fullName>
        <formula>LastModifiedDate - 0.03125</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow Trigger Timer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csord__Activation_Date__c</fullName>
        <description>The date of activation.</description>
        <inlineHelpText>The date of activation.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Client_Identifier__c</fullName>
        <description>A field for the service owner (client) to store their own unique identifier on the Service Object, for ease of identification to external systems</description>
        <externalId>true</externalId>
        <inlineHelpText>A field for the service owner (client) to store their own unique identifier on the Service Object, for ease of identification to external systems</inlineHelpText>
        <label>Client Identifier</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__Deactivation_Date__c</fullName>
        <description>The date of deactivation.</description>
        <inlineHelpText>The date of deactivation.</inlineHelpText>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Deactivation_Reason__c</fullName>
        <description>A reason to deactivate the service.</description>
        <inlineHelpText>A reason to deactivate the service.</inlineHelpText>
        <label>Deactivation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Order of this Service.</description>
        <inlineHelpText>The parent Order of this Service.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address to which this Service will be delivered.</description>
        <inlineHelpText>The address to which this Service will be delivered.</inlineHelpText>
        <label>Service Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Service of this Service.</description>
        <inlineHelpText>The parent Service of this Service.</inlineHelpText>
        <label>Parent Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Child Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Service</description>
        <inlineHelpText>The parent Solution of this Service</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>The status of the Service in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Subscription__c</fullName>
        <description>The parent Subscription of this Service.</description>
        <inlineHelpText>The parent Subscription of this Service.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <description>Sum of all the one-off charges of the service’s line items</description>
        <inlineHelpText>Sum of all the one-off charges of the service’s line items</inlineHelpText>
        <label>Total One-Off Charges</label>
        <summarizedField>csord__Service_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Service_Line_Item__c.csord__Service__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Recurring_Charges__c</fullName>
        <description>Sum of all the recurring charges of the service’s line items</description>
        <inlineHelpText>Sum of all the recurring charges of the service’s line items</inlineHelpText>
        <label>Total Recurring Charges</label>
        <summarizedField>csord__Service_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Service_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Service_Line_Item__c.csord__Service__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continuing In Subscription</fullName>
                </value>
                <value>
                    <fullName>Added To Subscription</fullName>
                </value>
                <value>
                    <fullName>Deleted From Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services (Parent Product Configuration)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>cscfga__Product_Bundle__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Replacement Services</relationshipLabel>
        <relationshipName>Replaced_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Product Configuration that will be used for generation of a Service that will replace this Service instance</description>
        <inlineHelpText>Lookup to the Product Configuration that will be used for generation of a Service that will replace this Service instance</inlineHelpText>
        <label>Replacement Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Replaced Services</relationshipLabel>
        <relationshipName>Replaced_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Replaced Services</relationshipLabel>
        <relationshipName>Replacement_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number_Sequence__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Service Number Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number__c</fullName>
        <label>Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Access_Active_IPv4__c</fullName>
        <label>UM Access Active IPv4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Access_Active_IPv6__c</fullName>
        <label>UM Access Active IPv6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Access_Transfer_IPv4__c</fullName>
        <label>UM Access Transfer IPv4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Access_Transfer_IPv6__c</fullName>
        <label>UM Access Transfer IPv6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdditionalInformation__c</fullName>
        <description>Used in Jira Integration for description attribute.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_RootOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Services (Root Order)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_IsExistingHardware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be populated with a boolean value, to indicate whether the hardware of the product has been changed. I.e. when IsExistingHardware will be set to &apos;Yes&apos; on scenarios like Move / Change, to indicate if there were no hardware changes done on the product and hence no need to provision the same.</description>
        <label>Is Existing Hardware</label>
        <type>Checkbox</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All_Services</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>csordtelcoa__Replacement_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Voice</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>csordtelcoa__Replacement_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ProductFamily__c</field>
            <operation>equals</operation>
            <value>Business Voice</value>
        </filters>
        <label>Business Voice</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CF</fullName>
        <columns>NAME</columns>
        <columns>Billing_Account_Number__c</columns>
        <columns>csord__Order__c</columns>
        <columns>csord__Service__c</columns>
        <columns>UM_ServiceStatus__c</columns>
        <columns>LG_Suborder__c</columns>
        <columns>LG_MarketSegment__c</columns>
        <columns>csord__Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ProductFamily__c</field>
            <operation>equals</operation>
            <value>Company Fiber</value>
        </filters>
        <label>CF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Numbers_Ported</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ServiceStatus__c</field>
            <operation>equals</operation>
            <value>Numbers Ported</value>
        </filters>
        <label>Numbers Ported</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Active</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ServiceStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Service Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ServiceStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Service Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Inactive</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ServiceStatus__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Service Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Ready_for_Billing</fullName>
        <columns>NAME</columns>
        <columns>csordtelcoa__Service_Number__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_ProductDescription__c</columns>
        <columns>LG_ServiceStatus__c</columns>
        <columns>csord__Subscription__c</columns>
        <columns>UM_CustomersInvoiceGroupingReference__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_InstallationWishDate__c</columns>
        <columns>LG_InstallationPlannedDate__c</columns>
        <columns>csord__Total_One_Off_Charges__c</columns>
        <columns>csord__Total_Recurring_Charges__c</columns>
        <columns>LG_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ServiceStatus__c</field>
            <operation>equals</operation>
            <value>Ready for Billing</value>
        </filters>
        <label>Service Ready for Billing</label>
        <language>en_US</language>
    </listViews>
</CustomObject>